# gender-bias-in-llms-for-higher-education

./: .gitignore  README.md  abilities_task.py  downstream_task.py  midstream_task.py  pyproject.toml  requirements.txt  resume_task.py  subjects_task.py  upstream_task.py  utils.py
analysis/: analyze_results.py  compute_log_or_text_bias.py  compute_resume_interaction_shap.py  downstream_or.py  downstream_weat.py  export_downstream_resume_excel.py  export_midstream_excel.py  export_resume_scoring_excel.py  export_upstream_excel.py  extract_downstream_adjectives.py  plot_paper_figures.py  sentiment_analysis.py  train_catboost_resume.py  train_catboost_resume_by_major.py  train_catboost_resume_per_model.py  train_lightgbm_resume.py  train_lightgbm_resume_by_major.py  train_lightgbm_resume_per_model.py  weat_attribute_sets.json  weat_score_analysis.py
analysis/text_bias/: logor_results.csv  logor_summary.json  logor_topk.csv
clients/: __init__.py  anthropic_client.py  baidu_client.py  base.py  doubao_client.py  factory.py  gemini_client.py  helpers.py  openai_style.py  qwen_client.py
config/: models.yaml  models.yaml.bak
docs/prompt/: prompt.docx
docs/source/: 教育性别观念的大语言模型测试题(2).docx
notes/: retry_candidates.csv  retry_candidates.json  temp_midstream.txt
prompts/: __init__.py  builders.py  datasets.py
scripts/: backfill_midstream_missing.py  backfill_resume_missing_scores.py  backfill_upstream_missing.py  fix_grok_midstream_parsed_assignment.py  list_midstream_rerun_commands.py  normalize_resume_scores_data.py  retry_failed.py  test_midstream_single.py
(+5 files in other folders)
