[project]
name = "ai-education-bias"
version = "0.1.0"
description = "Prompt orchestration framework to measure educational bias signals across multiple LLMs."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=8.3.0",
    "typer>=0.12.3",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "jieba>=0.42.1",
    "spacy>=3.7.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "textblob>=0.18.0",
    "snownlp>=0.12.3",
    "lightgbm>=4.5.0",
    "catboost>=1.2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clients", "prompts"]
py-modules = ["subjects_task", "abilities_task", "utils"]
